# Notepad

./: CMakeLists.txt  GUIDE.md  Makefile  README.md  package_miyoo.sh
.github/workflows/: build_miyoo.yml
.github/workflows/.github/workflows/: build_miyoo.yml
src/: App.cpp  App.hpp  InputEngine.cpp  InputEngine.hpp  State.hpp  main.cpp
src/States/: BrowserState.cpp  BrowserState.hpp  CanvasState.cpp  CanvasState.hpp  DecoyState.cpp  DecoyState.hpp  EditorState.cpp  EditorState.hpp  SettingsState.cpp  SettingsState.hpp
src/Utils/: AppSettings.hpp  FileSystem.cpp  FileSystem.hpp  HistoryManager.hpp
